# bitboard-chess

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
include/: Application.h  Bishop.h  Board.h  Chess.h  Game.h  Game.hpp  King.h  Knight.h  Move.h  Pawn.h  Piece.h  Queen.h  Rook.h  Validator.h
src/: Application.cpp  Bishop.cpp  Board.cpp  ChessTest.cpp  Game.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  Validator.cpp  main.cpp
